# genesis_tools

./: CMakeLists.txt  README.md  package.xml  requirements_Ubuntu20.04_agent-system_cpu.txt  requirements_Ubuntu20.04_agent-system_cuda.txt  rsl_rl_cpu.patch  use_cpu.patch
scripts/go2_locomotion/: go2_env.py  go2_eval.py  go2_test.py  go2_train.py
