<?xml version="1.0"?>
<package format="2">
  <name>genesis_tools</name>
  <version>0.1.0</version>
  <description>Genesis tools</description>

  <maintainer email="k-kojima@jsk.imi.i.u-tokyo.ac.jp">Kunio Kojima</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <!-- <exec_depend>genesis-world</exec_depend> -->

  <export>
  </export>
</package>
